make pages more mobile friendly and add teammates

--- a/app/Engineering.html
+++ b/app/Engineering.html
@@ -614,8 +614,8 @@
           <p>For our design stage, we applied computational approaches to model and design our packed column reactor, optimising it to the best of our ability. </p>
           <h2>Developing our model</h2>
           <p>We used a variety of mathematical approaches to derive equations that would describe our packed column bioreactor. We eventually found that our reactor would be governed by the following system of differential equations. The solution of this system of differential equations provides useful information for designing our reactor.</p>
-          <p>\( \frac{dm}{dt} + \vec{v}\cdot \nabla m - D\nabla^2 m = -(\frac{a}{f}) (k_a m (Q-q) - k_d q) \)</p>
-          <p>\( \frac{dq}{dt} = k_a m (Q-q) - k_d q \)</p>
+          <p class="eqn2">\( \frac{dm}{dt} + \vec{v}\cdot \nabla m - D\nabla^2 m = -(\frac{a}{f}) (k_a m (Q-q) - k_d q) \)</p>
+          <p class="eqn2">\( \frac{dq}{dt} = k_a m (Q-q) - k_d q \)</p>
           <p>Detailed derivation of these equations and the computational approaches used are described on the <a href="2020.igem.org/Team:Waterloo/Model">model page</a>.</p>
           <p>Once model equations had been developed, it was necessary to find values for the parameters so that useful results could be computed. These parameters were found directly in literature, or computed from combinations of other parameters. </p>
           <p>Once model equations had been developed, it was necessary to find values for the parameters so that useful results could be computed. These parameters were found directly in literature, or computed from combinations of other parameters. </p>
