--- a/app/Team.html
+++ b/app/Team.html
@@ -789,6 +789,55 @@
 						<div class="col teaminfo"></div>
 					</div>
 				</div>
+				<div class="wikisubteam">
+					WIKI
+				</div>
+				<div class="accordion">
+					<div class="row">
+						<div class="col">
+							<img id='teammate' src='/images/hillaryleung.png' onmouseover="this.src='https://2020.igem.org/wiki/images/6/61/T--Waterloo--2020_sillyhillaryleung.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/2/2e/T--Waterloo--2020_hillaryleung.png';"/>
+						</div>
+						<div class="col">
+							<img id='teammate' src='/images/serenahacker.png' onmouseover="this.src='https://2020.igem.org/wiki/images/a/ae/T--Waterloo--2020_sillyserenahacker.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/b/bf/T--Waterloo--2020_serenahacker.png';"/>
+						</div>
+						<div class="col"></div>
+						<div class="col"></div>
+					</div>
+					<div class="row">
+						<div class="col teaminfo">
+							<strong> Hillary Leung </strong> <br>
+							Arts and Business, Legal Studies & Digital Arts, Year 3 <br>
+							UX/UI Designer <br>
+							ENFP - Campaigner
+						</div>
+						<div class="col teaminfo">
+							<strong> Serena Hacker </strong> <br>
+							Software Engineering, Year 3 <br>
+							Web Developer <br>
+							ISFJ - Defender
+						</div>
+						<div class="col teaminfo"></div>
+						<div class="col teaminfo"></div>
+					</div>
+				</div>
+				<div class="panel">
+					<div class="row">
+						<div class="col teaminfo">
+							<strong> Fun fact about yourself? </strong> <br><br>
+							I can tie my shoes in less than 3 seconds and tie up my hair with a chopstick or pencil. <br> <br>
+							<strong> If you could have one superpower to improve our 2020 iGEM project, what would it be and why? </strong> <br><br>
+							Imagination manifestation. Then any cool designs/animations I imagine for the wiki can be magically brought into existence without limitations or constraints.
+						</div>
+						<div class="col teaminfo">
+							<strong> Fun fact about yourself? </strong> <br><br>
+							I love ice cream, and my goal is to try every ice cream shop in Toronto. <br> <br>
+							<strong> If you could have one superpower to improve our 2020 iGEM project, what would it be and why? </strong> <br><br>
+							Super speed coding, so I could instantly bring to life design ideas for the wiki. 
+						</div>
+						<div class="col teaminfo"></div>
+						<div class="col teaminfo"></div>
+					</div>
+				</div>
 				<img class='map' src="https://2020.igem.org/wiki/images/d/df/T--Waterloo--Team_Map.png" alt="Map of where our members have lived during this iGEM season!">
 				<div class="caption bottom">Map of where our members have lived during this iGEM season!</div>
 			</div>
