more mobile friendly work and promotion/pres videos

--- a/app/Attributions.html
+++ b/app/Attributions.html
@@ -32,6 +32,9 @@
 				<div class="headerCol2">
 					<img src='/images/buildings.svg'>
 				</div>
+				<div class="buildingsMobile">
+					<img src='/images/buildings.svg'>
+				</div>
 			</div>
 
 			<div class="pipecol">
