--- a/app/Safety.html
+++ b/app/Safety.html
@@ -32,6 +32,9 @@
 				<div class="headerCol2">
 					<img src='/images/buildings.svg'>
 				</div>
+				<div class="buildingsMobile">
+					<img src='/images/buildings.svg'>
+				</div>
 			</div>
 
 			<div class="pipecol">
@@ -45,7 +48,7 @@
 				
 					<path id="pipe-three" class="guidePipe" d="M139.773 1.50001L139.773 2983.41C139.773 2999.45 153.781 3012.2 168.937 3012.2H194.801V3032.11H168.937C143.345 3032 122.5 3011.38 122.5 2983.19V1.50011L139.773 1.50001Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
 					<path id="pipe-three-one" class="guidePipe" d="M189.5 3005.5H194.989V3039.79H189.5V3005.5Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
-					<path id="pipe-three-two" class="guidePipe" d="M146.902 662.377L146.902 668.318L114.5 668.318L114.5 662.377L146.902 662.377Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
+					<path id="pipe-three-two" class="guidePipe" d="M146.902 662.377L146.902 668.318L114.5 668.318L114.5 662.377L146.902 662.377Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3" style="visibility: hidden;"/>
 					<path id="pipe-three-three" class="guidePipe" d="M146.902 1975.77L146.902 1981.71L114.5 1981.71L114.5 1975.77L146.902 1975.77Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3" style="visibility: hidden;"/>
 					<path id="pipe-three-four" class="guidePipe" d="M146.902 2958.44L146.902 2964.38L114.5 2964.38L114.5 2958.44L146.902 2958.44Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
 				
