--- a/app/Contribution.html
+++ b/app/Contribution.html
@@ -31,6 +31,9 @@
 				<div class="headerCol2">
 					<img src='/images/buildings.svg'>
 				</div>
+				<div class="buildingsMobile">
+					<img src='/images/buildings.svg'>
+				</div>
 			</div>
 
 			<div class='text'>
