--- a/app/Engineering.html
+++ b/app/Engineering.html
@@ -32,6 +32,9 @@
 				</div>
 				<div class="headerCol2">
 					<img src='/images/buildings.svg'>
+        </div>
+        <div class="buildingsMobile">
+					<img src='/images/buildings.svg'>
 				</div>
 			</div>
 
