mobile friendly navbar

--- a/app/Description.html
+++ b/app/Description.html
@@ -9,6 +9,7 @@
 	<script>
 		$(function() {
 			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
+			$('mobileHeader').load('https://2020.igem.org/Template:Waterloo/headerMobile?action=raw&ctype=text/javascript');
 			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
 			$('accessibility').load('https://2020.igem.org/Template:Waterloo/accessibility?action=raw&ctype=text/javascript');
 		});
@@ -24,6 +25,7 @@
 	<header></header>
     <main id="top">
 		<article>
+			<mobileHeader></mobileHeader>
 			<div class="pageHeader"> 
 				<div class="headerCol">
 					<h1> DESCRIPTION </h1>
@@ -49,7 +51,6 @@
 				</video>
 			</div>
 			<div class='text'>
-				<p><a href="https://video.igem.org/videos/watch/ef5abb88-bbb0-4a81-96c1-8d5e2a2ca39d">Promotion Video</a></p>
 				<p><a href="https://video.igem.org/videos/watch/87d8bdc9-1c8c-436f-a413-ce27ff641478">Presentation Video</a></p>
 				<p><a href="https://2020.igem.org/Team:Waterloo/Poster">Poster</a></p>
 			</div>
