--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 	<script>
 		$(function() {
 			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
+			$('mobileHeader').load('https://2020.igem.org/Template:Waterloo/headerMobile?action=raw&ctype=text/javascript');
 			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
 			$('accessibility').load('https://2020.igem.org/Template:Waterloo/accessibility?action=raw&ctype=text/javascript');
 		});
@@ -24,6 +25,7 @@
   <header></header>
   
     <main>
+	  <mobileHeader></mobileHeader>
       <div id="homepageDiv">
 		<h1 class="slogan">Closing the loop for heavy metal waste</h1>
 		<p class="hp1">Electronic manufacturing consists of many processes, each of which generates wastewater with a unique composition of heavy metals.</p>
