--- a/app/Improvement.html
+++ b/app/Improvement.html
@@ -9,6 +9,7 @@
 	<script>
 		$(function() {
 			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
+			$('mobileHeader').load('https://2020.igem.org/Template:Waterloo/headerMobile?action=raw&ctype=text/javascript');
 			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
 			$('accessibility').load('https://2020.igem.org/Template:Waterloo/accessibility?action=raw&ctype=text/javascript');
 		});
@@ -24,6 +25,7 @@
 	<header></header>
     <main id="top">
 		<article>
+			<mobileHeader></mobileHeader>
 			<div class="pageHeader"> 
 				<div class="headerCol">
 					<h1> IMPROVEMENT </h1>
